2006-04-04  Bjrn Graf  <bjoern.graf@gmail.com>

        Reviewed by ggaren & darin.  Landed by eseidel.

        Integrate CURL version of gettimeofday
        http://bugzilla.opendarwin.org/show_bug.cgi?id=7399
        Disable crash report dialogs for testkjs.exe in Release mode
        http://bugzilla.opendarwin.org/show_bug.cgi?id=8113

        * kjs/testkjs.cpp:
        (StopWatch::start):
        (StopWatch::stop):
        (StopWatch::getElapsedMS):
        (main):
        (kjsmain):

2006-04-04  Eric Seidel  <eseidel@apple.com>

        Reviewed by mjs.

        * kjs/number_object.cpp:
        (NumberProtoFunc::callAsFunction): remove trunc() to fix win32.

2006-03-12  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin.
        
        - fixed "toPrecision sometimes messes up the last digit on intel Macs"
        http://bugzilla.opendarwin.org/show_bug.cgi?id=7748

        * kjs/number_object.cpp:
        (intPow10): Compute integer powers of 10 using exponentiation by squaring.
        (NumberProtoFunc::callAsFunction): Use intPow10(n) in place of all pow(10.0, n),
        plus a bit of refactoring.

2006-04-03  Darin Adler  <darin@apple.com>

        - tweak config.h and Platform.h to try to get buildbot working
          (making some small changes at the same time)

        * kjs/config.h: Removed now-unneeded HAVE_ICU.
        * kxmlcore/Platform.h: Tweak how platform gets set up. Move all the
        USE stuff to the end.

2006-04-03  George Staikos   <staikos@opensource.apple.com>

        Reviewed by Maciej.

        Fix Win32 build breakage from previous commit, remove unused forward.

2006-04-03  George Staikos   <staikos@opensource.apple.com>

        Reviewed by Maciej.

        Implement a unicode abstraction layer to make JavaScriptCore much more
        easily ported to other platforms without having to take in libicu.  Also
        makes the unicode related code easier to understand.
